tests/unit/default/syntax-error/058-create-table-parens-name-colon-type-parenses.x.t
---- IN ----
+%table(id:decimal()|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...:decimal()` near `|` at position 20 - at line 1
---- EXIT ----
1
